tests/fail/111-fail-as-binary-on-string.rs
use df_derive::ToDataFrame;
#[path = "../common.rs"]
mod core;

#[derive(ToDataFrame)]
struct Bad {
    #[df_derive(as_binary)]
    s: String,
}

fn main() {}
